fixed overflow on search

--- a/client/src/pages/categories/categories.css
+++ b/client/src/pages/categories/categories.css
@@ -1,4 +1,10 @@
 .overflow-cnt {
+    overflow: visible;
+}
+
+@media screen and (max-width: 1315px) {
+.overflow-cnt {
     overflow: scroll;
+}
 }
 
